--- a/ImageTool/ImageTool/ImageTool.vcxproj.filters
+++ b/ImageTool/ImageTool/ImageTool.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClInclude Include="GaussianDlg.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="AddNoiseDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DiffusionDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageTool.cpp">
@@ -135,6 +141,12 @@
       <Filter>IppImage</Filter>
     </ClCompile>
     <ClCompile Include="GaussianDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="AddNoiseDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DiffusionDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
