--- a/ImageTool/ImageTool/ImageTool.vcxproj.filters
+++ b/ImageTool/ImageTool/ImageTool.vcxproj.filters
@@ -90,6 +90,12 @@
     <ClInclude Include="DiffusionDlg.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="IppImage\IppGeometry.h">
+      <Filter>IppImage</Filter>
+    </ClInclude>
+    <ClInclude Include="TranslateDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageTool.cpp">
@@ -147,6 +153,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="DiffusionDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="IppImage\IppGeometry.cpp">
+      <Filter>IppImage</Filter>
+    </ClCompile>
+    <ClCompile Include="TranslateDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
