--- a/ImageTool/ImageTool/ImageTool.vcxproj
+++ b/ImageTool/ImageTool/ImageTool.vcxproj
@@ -209,6 +209,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="ResizeDlg.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="RotateDlg.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TranslateDlg.h" />
   </ItemGroup>
@@ -239,6 +240,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="ResizeDlg.cpp" />
+    <ClCompile Include="RotateDlg.cpp" />
     <ClCompile Include="TranslateDlg.cpp" />
   </ItemGroup>
   <ItemGroup>
