10장 주파수 공간에서의 영상 처리 ~p503

--- a/ImageTool/ImageTool/ImageTool.vcxproj.filters
+++ b/ImageTool/ImageTool/ImageTool.vcxproj.filters
@@ -102,6 +102,12 @@
     <ClInclude Include="RotateDlg.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="IppImage\IppFourier.h">
+      <Filter>IppImage</Filter>
+    </ClInclude>
+    <ClInclude Include="FreqFilteringDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageTool.cpp">
@@ -171,6 +177,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="RotateDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="IppImage\IppFourier.cpp">
+      <Filter>IppImage</Filter>
+    </ClCompile>
+    <ClCompile Include="FreqFilteringDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
