12장 색상평면나누기, 합치기 컬러 엣지 검출 컬러 영상의 히스토그램 균등화

--- a/ImageTool/ImageTool/ImageTool.vcxproj
+++ b/ImageTool/ImageTool/ImageTool.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="BrightnessContrastDlg.h" />
     <ClInclude Include="CannyEdgeDlg.h" />
     <ClInclude Include="ChildFrm.h" />
+    <ClInclude Include="ColorCombineDlg.h" />
     <ClInclude Include="DiffusionDlg.h" />
     <ClInclude Include="FileNewDlg.h" />
     <ClInclude Include="framework.h" />
@@ -225,6 +226,7 @@
     <ClCompile Include="BrightnessContrastDlg.cpp" />
     <ClCompile Include="CannyEdgeDlg.cpp" />
     <ClCompile Include="ChildFrm.cpp" />
+    <ClCompile Include="ColorCombineDlg.cpp" />
     <ClCompile Include="DiffusionDlg.cpp" />
     <ClCompile Include="FileNewDlg.cpp" />
     <ClCompile Include="FreqFilteringDlg.cpp" />
