--- a/ImageTool/ImageTool/ImageTool.vcxproj.filters
+++ b/ImageTool/ImageTool/ImageTool.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="IppImage\IppImage.h">
       <Filter>IppImage</Filter>
     </ClInclude>
+    <ClInclude Include="ColorCombineDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageTool.cpp">
@@ -208,6 +211,9 @@
     </ClCompile>
     <ClCompile Include="IppImage\IppConvert.cpp">
       <Filter>IppImage</Filter>
+    </ClCompile>
+    <ClCompile Include="ColorCombineDlg.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
