--- a/ImageTool/ImageTool/ImageTool.vcxproj
+++ b/ImageTool/ImageTool/ImageTool.vcxproj
@@ -192,7 +192,7 @@
     <ClInclude Include="BinarizationDlg.h" />
     <ClInclude Include="BrightnessContrastDlg.h" />
     <ClInclude Include="CannyEdgeDlg.h" />
-    <ClInclude Include="CAviView.h" />
+    <ClInclude Include="AviView.h" />
     <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="ColorCombineDlg.h" />
     <ClInclude Include="DiffusionDlg.h" />
@@ -236,7 +236,7 @@
     <ClCompile Include="BinarizationDlg.cpp" />
     <ClCompile Include="BrightnessContrastDlg.cpp" />
     <ClCompile Include="CannyEdgeDlg.cpp" />
-    <ClCompile Include="CAviView.cpp" />
+    <ClCompile Include="AviView.cpp" />
     <ClCompile Include="ChildFrm.cpp" />
     <ClCompile Include="ColorCombineDlg.cpp" />
     <ClCompile Include="DiffusionDlg.cpp" />
