--- a/ImageTool/ImageTool/ImageTool.vcxproj.filters
+++ b/ImageTool/ImageTool/ImageTool.vcxproj.filters
@@ -141,7 +141,7 @@
     <ClInclude Include="AviDoc.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="CAviView.h">
+    <ClInclude Include="AviView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -254,7 +254,7 @@
     <ClCompile Include="AviDoc.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="CAviView.cpp">
+    <ClCompile Include="AviView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
