--- a/ImageTool/ImageTool/ImageTool.vcxproj
+++ b/ImageTool/ImageTool/ImageTool.vcxproj
@@ -289,6 +289,7 @@
     <Image Include="res\output_wnd.ico" />
     <Image Include="res\output_wnd_hc.ico" />
     <Image Include="res\Toolbar.bmp" />
+    <Image Include="res\toolbar1.bmp" />
     <Image Include="res\Toolbar256.bmp" />
     <Image Include="res\userimages.bmp" />
   </ItemGroup>
