--- a/ImageTool/ImageTool/ImageTool.vcxproj.filters
+++ b/ImageTool/ImageTool/ImageTool.vcxproj.filters
@@ -295,5 +295,8 @@
     <Image Include="res\avi_type.ico">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\toolbar1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
